Build java jar inside docker

--- a/ts-news-service/Dockerfile
+++ b/ts-news-service/Dockerfile
@@ -4,7 +4,7 @@ FROM mrrm/web.go
 RUN mkdir -p /app
 WORKDIR /app
 
-ADD ./src/main/main.go /app/
+ADD ./ts-news-service/src/main/main.go /app/
 RUN go build
 CMD [ "./app" ]
 
