--- a/ts-ui-dashboard/Dockerfile
+++ b/ts-ui-dashboard/Dockerfile
@@ -2,6 +2,6 @@ FROM openresty/openresty:trusty
 
 RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
 
-COPY nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
+COPY ts-ui-dashboard/nginx.conf /usr/local/openresty/nginx/conf/nginx.conf
 
-COPY static /usr/share/nginx/html
+COPY ts-ui-dashboard/static /usr/share/nginx/html
