--- a/ts-voucher-service/Dockerfile
+++ b/ts-voucher-service/Dockerfile
@@ -5,11 +5,11 @@ RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shang
 RUN mkdir -p /app
 WORKDIR /app
 
-COPY requirements.txt ./
+COPY ts-voucher-service/requirements.txt ./
 RUN pip install cryptography
 RUN pip install --no-cache-dir -r requirements.txt
 
-ADD ./server.py /app/
+ADD ./ts-voucher-service/server.py /app/
 CMD [ "python", "server.py" ]
 
 EXPOSE 16101
