--- a/ts-ticket-office-service/Dockerfile
+++ b/ts-ticket-office-service/Dockerfile
@@ -5,13 +5,13 @@ RUN /bin/cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && echo 'Asia/Shang
 RUN mkdir -p /app
 WORKDIR /app
 
-ADD ./node_modules /app/node_modules
-ADD ./package.json /app/
-ADD ./public /app/public
+ADD ./ts-ticket-office-service/node_modules /app/node_modules
+ADD ./ts-ticket-office-service/package.json /app/
+ADD ./ts-ticket-office-service/public /app/public
 # RUN npm install
 
-ADD ./bin /app/bin
-ADD ./app.js /app/
+ADD ./ts-ticket-office-service/bin /app/bin
+ADD ./ts-ticket-office-service/app.js /app/
 CMD [ "npm", "start" ]
 
 EXPOSE 16108
