--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ ENV/
 env.bak/
 venv.bak/
 
+deployment/kubernetes-manifests/quickstart-k8s/yamls/deploy.yaml
+deployment/kubernetes-manifests/quickstart-k8s/yamls/secret.yaml
