--- a/deployment/kubernetes-manifests/skywalking/es.yml
+++ b/deployment/kubernetes-manifests/skywalking/es.yml
@@ -4,11 +4,13 @@ metadata:
   creationTimestamp: null
   name: elasticsearch
 spec:
+  type: NodePort
   ports:
   - name: db
     port: 9200
     protocol: TCP
     targetPort: 9200
+    nodePort: 30092
   - name: transport
     port: 9300
     protocol: TCP
