--- a/deployment/kubernetes-manifests/skywalking/skywalking.yml
+++ b/deployment/kubernetes-manifests/skywalking/skywalking.yml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: skywalking-cm
 data:
-  STORAGE: 'elasticsearch7'
+  STORAGE: 'elasticsearch'
   STORAGE_ES_CLUSTER_NODES: 'elasticsearch:9200'
   CORE_GRPC_PORT: '11800'
   CORE_REST_PORT: '12800'
@@ -31,7 +31,7 @@ spec:
           - prefix: SW_
             configMapRef: 
               name: skywalking-cm                  
-          image: apache/skywalking-oap-server:8.5.0-es7
+          image: apache/skywalking-oap-server:9.6.0
           imagePullPolicy: IfNotPresent         
           name: skywalking
           ports:
@@ -100,8 +100,8 @@ spec:
       containers:
         - env:
             - name: SW_OAP_ADDRESS
-              value: "skywalking:12800"          
-          image: apache/skywalking-ui:8.5.0
+              value: "http://skywalking:12800"          
+          image: apache/skywalking-ui:9.6.0
           imagePullPolicy: IfNotPresent         
           name: skywalking-ui
           ports:
