--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-api</artifactId>
+        </dependency>
+            <dependency>
+            <groupId>io.opentelemetry</groupId>
+            <artifactId>opentelemetry-sdk</artifactId>
+        </dependency>
         <!--        需要注意springboot、springcloud、springcloud alibaba之间的版本对应关系-->
 
         <!--        springcloud 相关依赖 在dependency management中-->
@@ -142,11 +150,6 @@
             <artifactId>logback-core</artifactId>
             <version>1.2.3</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.skywalking</groupId>
-            <artifactId>apm-toolkit-logback-1.x</artifactId>
-            <version>8.6.0</version>
-        </dependency>
     </dependencies>
 
 
@@ -165,6 +168,13 @@
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>2.2.7.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.opentelemetry</groupId>
+                <artifactId>opentelemetry-bom</artifactId>
+                <version>1.30.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
