--- a/deployment/kubernetes-manifests/efk-deployment/kibana-deployment.yaml
+++ b/deployment/kubernetes-manifests/efk-deployment/kibana-deployment.yaml
@@ -1,27 +1,26 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kibana-logging
-  namespace: kube-system
+  name: kibana
   labels:
-    k8s-app: kibana-logging
+    k8s-app: kibana
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
 spec:
   replicas: 1
   selector:
     matchLabels:
-      k8s-app: kibana-logging
+      k8s-app: kibana
   template:
     metadata:
       labels:
-        k8s-app: kibana-logging
+        k8s-app: kibana
       annotations:
         seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
     spec:
       containers:
-      - name: kibana-logging
-        image: zhongyuanzhao000/docker_elastic_co_kibana_kibana-oss:v6.2.4
+      - name: kibana
+        image: docker.elastic.co/kibana/kibana:7.1.0
         resources:
           # need more cpu upon initialization, therefore burstable class
           limits:
@@ -31,8 +30,6 @@ spec:
         env:
           - name: ELASTICSEARCH_URL
             value: http://elasticsearch-logging:9200
-          - name: SERVER_BASEPATH
-            value: /api/v1/namespaces/kube-system/services/kibana-logging/proxy
         ports:
         - containerPort: 5601
           name: ui
