--- a/deployment/kubernetes-manifests/efk-deployment/kibana-service.yaml
+++ b/deployment/kubernetes-manifests/efk-deployment/kibana-service.yaml
@@ -1,10 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kibana-logging
-  namespace: kube-system
+  name: kibana
   labels:
-    k8s-app: kibana-logging
+    k8s-app: kibana
     kubernetes.io/cluster-service: "true"
     addonmanager.kubernetes.io/mode: Reconcile
     kubernetes.io/name: "Kibana"
@@ -14,4 +13,4 @@ spec:
     protocol: TCP
     targetPort: ui
   selector:
-    k8s-app: kibana-logging
+    k8s-app: kibana
